devops/Docker/Caronte/proyectos/miportfolio/deploy/kubernetes/sin_helm/deploy-portfolio.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: portfolio-deployment
  namespace: proyectoportfolio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: peedroorgzz/portfolio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
