devops/Docker/Caronte/proyectos/miportfolio/deploy/kubernetes/sin_helm/ingress-portfolio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: proyectoportfolio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: portfolio.pedrorodriguezgimenez.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
